250507 수업내용 커밋

--- a/vue/js_review/async.html
+++ b/vue/js_review/async.html
@@ -9,7 +9,7 @@
   <script>
     // 비동기
     async function getBoard(){
-      fetch("http://localhost:3000/board/1")
+      fetch("/api/board/1")
       .then( res => res.json() )
       .then( res => console.log("1", res.title))
       console.log("2", "end response")
@@ -20,7 +20,7 @@
 
   //   // 동기
   //   async function getBoard1(){
-  //     let res = await fetch("http://localhost:3000/board/1")
+  //     let res = await fetch("/api/board/1")
   //     res = await res.json
   //     console.log("1", res.title);
   //     console.log("2", "end response")
@@ -31,7 +31,7 @@
 
   //   // 동기 아님 비동기
   //   async function getBoard1(){
-  //     let res = await axios ("http://localhost:3000/board/1")
+  //     let res = await axios ("/api/board/1")
   //     console.log("1", res.title);
   //     console.log("2", "end response")
   //   }
